# AoC2024

./: .gitignore  README.md  pyproject.toml
2024/utils/: day_template.py  loc.py  support.py
scripts/day1/: day1.py  day1_2024.py
scripts/day10/: day10.py  day10_2023.py  day10_2024.py
scripts/day11/: day11_2024.py  day9_2024.py
scripts/day12/: day12.py  day12_2023.py  day12_2024.py
scripts/day13/: day13_2024.py
scripts/day14/: day14_2024.py
scripts/day15/: day15_2024.py
scripts/day16/: day16_2024.py
scripts/day2/: day2.py
scripts/day4/: day4.py
scripts/day5/: day5.py
scripts/day6/: day6_2024.py
scripts/day7/: day7.py  day7_2024.py
scripts/day8/: day8.py  day8_2024.py
scripts/utils/: day_template.py  leader_tui.py  loc.py  support.py
