[tool.poetry]
name = "na"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Andy Heroy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
